--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
-          <h2>PANKAJ Solutions<br>for Your <span>Business!</span></h2>
+          <h2>PANKAJ VLSI Solutions<br>for Your <span>Beginners!</span></h2>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
