--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PANKAJ VLSI</title>
+  <title>PANKAJ VLSI TRAINING</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -98,7 +98,7 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
-          <h2>PANKAJ VLSI Solutions<br>for Your <span>Beginners!</span></h2>
+          <h2>PANKAJ VLSI Training <br>for <span>Beginners And Experienced!</span></h2>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
